[gd_scene load_steps=13 format=3 uid="uid://dhhn808j4ccx1"]

[ext_resource type="PackedScene" uid="uid://vsdcov43fw2p" path="res://src/enemies/ememy_default/enemy.tscn" id="1_ad8i0"]
[ext_resource type="Script" path="res://src/enemies/dummy/dummy.gd" id="2_b1mfk"]
[ext_resource type="Shader" path="res://src/resources/shaders/color/color.gdshader" id="3_umjo0"]
[ext_resource type="Texture2D" uid="uid://c32gydutqqqxk" path="res://src/enemies/dummy/sprites/dummy_tiled.png" id="3_vnl4m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sk1nj"]
radius = 8.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_td5md"]
radius = 8.0
height = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_clci8"]
resource_local_to_scene = true
shader = ExtResource("3_umjo0")
shader_parameter/color_ar = Color(0.941176, 0.92549, 0.886275, 1)
shader_parameter/alpha = 1.0
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_eej2a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DummyTiled:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DummyTiled:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DummyTiled:material:shader_parameter/color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.141176, 0.168627, 0.290196, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DummyTiled:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DummyTiled:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wxgv7"]
resource_name = "death"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DummyTiled:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DummyTiled:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DummyTiled:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2ibjh"]
resource_name = "hited"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DummyTiled:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DummyTiled:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DummyTiled:material:shader_parameter/color_ar")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0.141176, 0.168627, 0.290196, 1), Color(0.941176, 0.92549, 0.886275, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DummyTiled:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1f45e"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DummyTiled:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DummyTiled:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DummyTiled:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wq5n"]
_data = {
"RESET": SubResource("Animation_eej2a"),
"death": SubResource("Animation_wxgv7"),
"hited": SubResource("Animation_2ibjh"),
"idle": SubResource("Animation_1f45e")
}

[node name="Dummy" instance=ExtResource("1_ad8i0")]
collision_mask = 4
script = ExtResource("2_b1mfk")
flip_h = false

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CapsuleShape2D_sk1nj")

[node name="Health" parent="." index="1"]
max_health = 40.0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_td5md")

[node name="DummyTiled" type="Sprite2D" parent="." index="3"]
material = SubResource("ShaderMaterial_clci8")
position = Vector2(2, 0)
texture = ExtResource("3_vnl4m")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_2wq5n")
}

[node name="HitedTimer" type="Timer" parent="." index="5"]

[connection signal="timeout" from="HitedTimer" to="." method="_on_hited_timer_timeout"]

[editable path="HurtBox"]
